ping_pong/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ping-pong-svc
  namespace: exercies
spec:
  type: ClusterIP
  selector:
    app: ping-pong
  ports:
    - name: http
      protocol: TCP
      port: 1235 # This is a port that is available to the cluster, in this case it can be ~ anything
      targetPort: 3000 # This is the target port
